--- a/XOTIN-QIZLAR_2/sass/index.scss
+++ b/XOTIN-QIZLAR_2/sass/index.scss
@@ -12,7 +12,7 @@
 @import '_Contacts';
 @import '_statistics_inside';
 @import '_Interesting';
-
+@import '_site_map';
 
 body{
     font-family: 'Montserrat', sans-serif;
@@ -21,6 +21,12 @@ body{
 .container{
     max-width: 1320px;
     margin: 0 auto;
+}
+
+.container__cmd{
+    max-width: 1320px;
+    margin: 0 auto;
+    position: relative;
 }
 
 .clearfix::after {
@@ -205,6 +211,90 @@ body{
         -o-border-radius:6px;
         li+li{
            margin-top: 10px;
+        }
+    }
+
+
+    &__from__true{
+        width: 34px;
+        height: 34px;
+        background-color: #F0F6F9;
+        @include fontAll(15px,500,#A5B6BC);
+        text-align: center;
+    }
+
+
+    &__form{
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        padding: 40px;
+        z-index: 0;
+        opacity: 0;
+        margin-top: -100%;
+        background-color:rgba(255, 255, 255, 0.5);
+        @extend%transition;
+        form{
+            display: flex;
+            align-items:center;
+            position: absolute;
+            width: 100%;
+            top: 50%;
+            left: 0;
+        }
+    }
+
+    &__button__false{
+        position: absolute;
+        top: 0;
+        right: 40px;
+        width: 40px;
+        height: 40px;
+        text-align: center;
+        border-radius: 50px;
+        -webkit-border-radius: 50px;
+        -moz-border-radius: 50px;
+        -ms-border-radius: 50px;
+        -o-border-radius: 50px;
+        @include fontAll(20px,600,#fff);
+        line-height: 100%;
+        background-color:$link;
+}
+
+    &__form__button{
+        width: 40px;
+        height: 40px;
+        text-align: center;
+        border-radius: 50px;
+        -webkit-border-radius: 50px;
+        -moz-border-radius: 50px;
+        -ms-border-radius: 50px;
+        -o-border-radius: 50px;
+        @include fontAll(18px,600,#fff);
+        line-height: 100%;
+        margin-left: -40px;
+        background-color:$link;
+    }
+
+    &__form__input{
+        width: 80%;
+        height: 40px;
+        border: none;
+        outline: none;
+        background-color:$link;
+        border-radius:50px;
+        -webkit-border-radius:50px;
+        -moz-border-radius:50px;
+        -ms-border-radius:50px;
+        -o-border-radius:50px;
+        padding: 10px 30px;
+        @include fontAll(14px,600,#fff);
+        line-height: 100%;
+        &::placeholder{
+            @include fontAll(14px,600,#fff);
+            line-height: 100%;
         }
     }
 }
@@ -861,6 +951,83 @@ body{
 // Affiliate end
 
 
+// subscription start
+
+
+.subscription{
+    position: relative;
+    margin-bottom: 70px;
+
+    &__list{
+        display: flex;
+        align-items:flex-start;
+        grid-gap: 20px;
+        flex-wrap: wrap;
+    }
+
+    &__item{
+        flex: 0 0 48%;
+        form{
+            width: 100%;
+            label{
+                @include fontAll(16px,400,$link);
+                line-height: 30px;
+                display: flex;
+                align-items:center;
+                grid-gap: 10px;
+            }
+        }
+    }
+
+    &__text{
+        @include fontAll(16px,400,$link);
+        line-height: 30px;
+        margin-top: 20px;
+    }
+
+
+    &__input{
+        width: 100%;
+        background-color:#F0F6F9;
+        border-radius:6px;
+        -webkit-border-radius:6px;
+        -moz-border-radius:6px;
+        -ms-border-radius:6px;
+        -o-border-radius:6px;
+        border:none;
+        outline: none;
+        height: 50px;
+        padding: 10px 30px;
+        margin-bottom: 20px;
+        @include fontAll(16px,400,$link);
+    }
+
+    &__chik__input{
+        width: 25px;
+        height: 25px;
+    }
+
+    &__button{
+        background-color:#FF4361;
+        border:none;
+        outline: none;
+        width: 100%;
+        height: 50px;
+        text-align: center;
+        border-radius:30px;
+        -webkit-border-radius:30px;
+        -moz-border-radius:30px;
+        -ms-border-radius:30px;
+        -o-border-radius:30px;
+        @include fontAll(16px,400,#fff);
+        text-transform: uppercase;
+        margin-top: 20px;
+    }
+}
+
+
+// subscription end
+
 
 // footer start
 
@@ -963,78 +1130,6 @@ body{
 
 
 
-// anemation start
-
-#preloder {
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    z-index: 999999;
-    background: linear-gradient(0deg, rgba(24, 13, 13, 0.83), rgba(53, 104, 122, 0.8));;
-}
-
-.loader {
-    width: 40px;
-    height: 40px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    border-radius: 60px;
-    animation: loader 0.8s linear infinite;
-    -webkit-animation: loader 0.8s linear infinite;
-}
-
-@keyframes loader {
-    0% {
-        -webkit-transform: rotate(0deg);
-        transform: rotate(0deg);
-        border: 4px solid #f44336;
-        border-left-color: transparent;
-    }
-
-    50% {
-        -webkit-transform: rotate(180deg);
-        transform: rotate(180deg);
-        border: 4px solid #673ab7;
-        border-left-color: transparent;
-    }
-
-    100% {
-        -webkit-transform: rotate(360deg);
-        transform: rotate(360deg);
-        border: 4px solid #f44336;
-        border-left-color: transparent;
-    }
-}
-
-@-webkit-keyframes loader {
-    0% {
-        -webkit-transform: rotate(0deg);
-        border: 4px solid #f44336;
-        border-left-color: transparent;
-    }
-
-    50% {
-        -webkit-transform: rotate(180deg);
-        border: 4px solid #673ab7;
-        border-left-color: transparent;
-    }
-
-    100% {
-        -webkit-transform: rotate(360deg);
-        border: 4px solid #f44336;
-        border-left-color: transparent;
-    }
-}
-
-
-// anemation end
-
-
-
 @media(max-width:1450px){
     .header__top{
         margin-top: 20px;
@@ -1074,7 +1169,9 @@ body{
     .video_gallery__top,
     .Contacts__top,
     .statistics_inside__top,
-    .Interesting__top{
+    .Interesting__top,
+    .subscription__list,
+    .site_map__cart{
         margin-left: 60px;
         margin-right: 60px;
     }
@@ -1363,6 +1460,19 @@ body{
     .header__item__link{
         display: none;
     }
+
+    .subscription__list{
+        flex-direction: column;
+    }
+
+    .subscription__input,
+    .subscription__button{
+        height: 45px;
+    }
+
+    .subscription {
+        margin-bottom: 30px;
+    }
 }
 
 
@@ -1410,13 +1520,23 @@ body{
     .video_gallery__top,
     .Contacts__top,
     .statistics_inside__top,
-    .Interesting__top{
+    .Interesting__top,
+    .subscription__list,
+    .site_map__cart{
         margin-left: 30px;
         margin-right: 30px;
     }
 
     .header__item__menu{
         display: none;
+    }
+
+    .header__form {
+        padding: 20px;
+    }
+
+    .header__button__false{
+        right: 0;
     }
 
     .header__border{
